updated pdf styles

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="col">
                 <iframe src="https://drive.google.com/file/d/1gsBe1JguPebG8K_HDGZTK8pAVBp4dva2/preview" class="menus"></iframe>
             </div>
-            <div class="col">
+            <div class="col" style="margin-top: 3vh;">
                 <iframe src="https://drive.google.com/file/d/1gsBe1JguPebG8K_HDGZTK8pAVBp4dva2/preview" class="menus"></iframe>
             </div>
         </div>
@@ -151,7 +151,7 @@
             <div class="col">
                 <iframe src="https://drive.google.com/file/d/1gsBe1JguPebG8K_HDGZTK8pAVBp4dva2/preview" class="menus"></iframe>
             </div>
-            <div class="col">
+            <div class="col" style="margin-top: 3vh;">
                 <iframe src="https://drive.google.com/file/d/1gsBe1JguPebG8K_HDGZTK8pAVBp4dva2/preview" class="menus"></iframe>
             </div>
         </div>
